--- a/env.example
+++ b/env.example
@@ -12,6 +12,17 @@ JWT_EXPIRES_IN=24h
 # Application Configuration
 NODE_ENV=development
 PORT=3000
+FRONTEND_URL=http://localhost:3000
+
+# Stripe Configuration
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+
+# Stripe Price IDs (create these in your Stripe dashboard)
+STRIPE_BASIC_PRICE_ID=price_basic_monthly_id
+STRIPE_STANDARD_PRICE_ID=price_standard_monthly_id
+STRIPE_PREMIUM_PRICE_ID=price_premium_monthly_id
 
 # Optional: Redis for session management (if needed)
 # REDIS_HOST=localhost
